--- a/ZotPad/MainStoryboard_iPhone.storyboard
+++ b/ZotPad/MainStoryboard_iPhone.storyboard
@@ -797,7 +797,7 @@
                                     <navigationItem title="Edit tags" id="1p3-bt-p23">
                                         <barButtonItem key="leftBarButtonItem" systemItem="add" id="qWN-ga-2Nw">
                                             <connections>
-                                                <segue destination="iM6-AI-xbl" kind="modal" id="Ofe-Ts-WwO"/>
+                                                <segue destination="iM6-AI-xbl" kind="modal" identifier="NewTagDialog" id="Ofe-Ts-WwO"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="iBz-hy-iY6">
@@ -829,7 +829,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="XSS-B4-9cd">
+                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="XSS-B4-9cd">
                                 <rect key="frame" x="20" y="56" width="280" height="30"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -840,7 +840,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="New tag" id="ALx-ep-EMI">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="0cW-PM-OxM">
+                                        <barButtonItem key="rightBarButtonItem" tag="2" systemItem="save" id="0cW-PM-OxM">
                                             <connections>
                                                 <action selector="createTag:" destination="iM6-AI-xbl" id="VEa-FH-dhr"/>
                                             </connections>
